Added url scan api

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "debug": "nodemon --inspect app.js"
   },
   "dependencies": {
+    "axios": "^0.18.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
